@@ -1,0 +1,4 @@
+from webob import Response
+
+def ok(context, request):
+    return Response('OK')
