@@ -28,6 +28,9 @@ Unreleased
   requires the ``aspell`` command.  Please see the buildout README.txt for
   instructions on installing Aspell.
 
+- Moved the ``ok.html`` and ``zodbinfo.html`` views to karl core since
+  all partners need them.
+
 3.5.1 (2009-07-17)
 ------------------
 
